# Normaliz

./: Makefile.am  apt.txt  configure.ac  postBuild
python/: Makefile  Makefile.am  Makefile.in  setup.py.in
source/: CMakeLists.txt  pkg-config.pc.cmake
